Fix: remove the lock-body-scroll which caused issues on ios

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -228,12 +228,11 @@
   appearance: none;
   background: none;
 
-  left: 1px;
-
   cursor: pointer;
 
   position: relative;
-  z-index: calc(var(--z-sidebar) + 2);
+
+  z-index: calc(var(--z-sidebar) + 1);
 }
 
 .hamburger-menu span {
@@ -282,6 +281,10 @@
   opacity: 1;
 }
 
+.body-menu-scroll {
+  overflow: hidden;
+}
+
 /* side navbar */
 .sidebar-menu {
   position: fixed;
@@ -290,7 +293,7 @@
   right: 0;
   z-index: var(--z-sidebar);
 
-  padding-top: 6em;
+  padding-top: 5rem;
 
   width: 0;
   max-width: 300px;
